--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 __pycache__/Day1_Input.cpython-37.pyc
 inputs/__pycache__/Day1_Input.cpython-37.pyc
 inputs/__pycache__/__init__.cpython-37.pyc
+__pycache__/common.cpython-37.pyc
