reorganised repo to lend itself to TDD in future using pytest

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ __pycache__/Day1_Input.cpython-37.pyc
 inputs/__pycache__/Day1_Input.cpython-37.pyc
 inputs/__pycache__/__init__.cpython-37.pyc
 __pycache__/common.cpython-37.pyc
+__pycache__/test.cpython-37-PYTEST.pyc
+__pycache__/day8.cpython-37.pyc
+first week/inputs/__pycache__/__init__.cpython-37.pyc
+Day8/__pycache__/day8_test.cpython-37-PYTEST.pyc
+Day8/__pycache__/day8.cpython-37.pyc
+Day8/__pycache__/common.cpython-37.pyc
