--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ first week/inputs/__pycache__/__init__.cpython-37.pyc
 Day8/__pycache__/day8_test.cpython-37-PYTEST.pyc
 Day8/__pycache__/day8.cpython-37.pyc
 Day8/__pycache__/common.cpython-37.pyc
+Day9/__pycache__/common.cpython-37.pyc
+Day9/__pycache__/day9_test.cpython-37-PYTEST.pyc
+Day9/__pycache__/day9.cpython-37.pyc
